--- a/wct-backend/src/main/resources/application.properties
+++ b/wct-backend/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Server Config
-server.port=8080  # Change if needed
+server.port=8081   
